Using shared code as import

--- a/CounterFactualDPG_GA_Constraints/DataAugmentation_DPG.ipynb
+++ b/CounterFactualDPG_GA_Constraints/DataAugmentation_DPG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -23,12 +23,9 @@
    "outputs": [],
    "source": [
     "# Set path to constraints directory\n",
-    "import os\n",
+    "from shared_utils import setup_paths\n",
     "\n",
-    "# Get the path to the constraints directory from this notebook's location\n",
-    "notebook_dir = os.getcwd()\n",
-    "constraints_dir = os.path.abspath(os.path.join(notebook_dir, '..', 'constraints'))\n",
-    "PATH = constraints_dir + '/'\n"
+    "notebook_dir, constraints_dir, PATH = setup_paths()"
    ]
   },
   {
