Adding shared imports

--- a/CounterFactualDPG_GA_Constraints/DataAugmentation_DPG.ipynb
+++ b/CounterFactualDPG_GA_Constraints/DataAugmentation_DPG.ipynb
@@ -44,24 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "id": "gob41udBuraa"
    },
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.datasets import load_iris\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "import ast\n",
-    "from scipy.spatial.distance import euclidean, cityblock, cosine\n",
-    "from scipy.spatial.distance import cdist"
+    "# Import shared libraries\n",
+    "from shared_utils import (\n",
+    "    RandomForestClassifier, load_iris, train_test_split,\n",
+    "    np, pd, plt, sns, ast,\n",
+    "    euclidean, cityblock, cosine, cdist\n",
+    ")"
    ]
   },
   {
