--- a/CounterFactualDPG_GA_Constraints/CounterFactualExplanation_DPG.ipynb
+++ b/CounterFactualDPG_GA_Constraints/CounterFactualExplanation_DPG.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -807,17 +807,10 @@
     }
    ],
    "source": [
-    "# Load the Iris dataset\n",
-    "iris = load_iris()\n",
-    "X = iris.data\n",
-    "y = iris.target\n",
+    "# Load the Iris dataset and train model\n",
+    "from shared_utils import load_and_train_model\n",
     "\n",
-    "# Split the dataset into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
-    "\n",
-    "# Train a RandomForestClassifier with 3 base learners\n",
-    "model = RandomForestClassifier(n_estimators=3, random_state=42)\n",
-    "model.fit(X_train, y_train)"
+    "iris, X, y, X_train, X_test, y_train, y_test, model = load_and_train_model()"
    ]
   },
   {
