Adding rule combination generation

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -1188,6 +1188,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ebcff640",
+   "metadata": {},
+   "source": [
+    "## Generate Counterfactuals with All Rule Combinations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "670ef712",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = {'petal width (cm)': 6.1, 'petal length (cm)': 2.8, 'sepal length (cm)': 4.7, 'sepal width (cm)': 1.2}\n",
+    "rules = ['non_increasing', 'non_decreasing']\n",
+    "\n",
+    "# Generate all possible combinations of rules for each feature\n",
+    "feature_names = list(sample.keys())\n",
+    "rule_combinations = list(itertools.product(rules, repeat=len(feature_names)))\n",
+    "\n",
+    "counterfactuals_df_combinations = []\n",
+    "\n",
+    "# Iterate through each combination of rules\n",
+    "for combination in rule_combinations:\n",
+    "    dict_non_actionable = dict(zip(feature_names, combination))\n",
+    "\n",
+    "    # Create an instance of the CounterFactualModel class\n",
+    "    cf_dpg = CounterFactualModel(model, constraints)\n",
+    "    cf_dpg.dict_non_actionable = dict_non_actionable\n",
+    "\n",
+    "    # Generate counterfactual\n",
+    "    counterfactual = cf_dpg.generate_counterfactual(sample, target_class=2)\n",
+    "    if (counterfactual == None):\n",
+    "        continue\n",
+    "\n",
+    "    plot_sample_and_counterfactual_heatmap(sample, predicted_class, counterfactual,  model.predict(pd.DataFrame([counterfactual])),  dict_non_actionable)\n",
+    "\n",
+    "    # Prepare data for DataFrame\n",
+    "    cf_data = counterfactual.copy()\n",
+    "    cf_data.update({'Rule_' + k: v for k, v in dict_non_actionable.items()})\n",
+    "\n",
+    "    # Append to DataFrame\n",
+    "    counterfactuals_df_combinations.append(cf_data)\n",
+    "\n",
+    "counterfactuals_df_combinations = pd.DataFrame(counterfactuals_df_combinations)\n",
+    "# Displaying the DataFrame\n",
+    "print(counterfactuals_df_combinations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "724106ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from CounterFactualVisualizer import plot_pca_with_counterfactuals\n",
+    "\n",
+    "plot_pca_with_counterfactuals(model, pd.DataFrame(X), y, sample, counterfactuals_df_combinations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e9d639a",
+   "metadata": {},
+   "source": [
+    "## Generate Multiple Counterfactuals with Replications"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "a4f7499f",
