--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4350a6d6",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
     "\n",
     "from CounterFactualModel import CounterFactualModel\n",
     "from ConstraintParser import ConstraintParser\n",
-    "from CounterFactualVisualizer import plot_pca_with_counterfactual, plot_sample_and_counterfactual_heatmap\n",
+    "from CounterFactualVisualizer import plot_pca_with_counterfactual, plot_sample_and_counterfactual_heatmap, plot_pca_loadings\n",
     "from CounterFactualExplainer import CounterFactualExplainer\n",
     "\n",
     "import itertools\n",
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "057913a5",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "84209d79",
    "metadata": {},
    "outputs": [
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f355c195",
    "metadata": {},
    "outputs": [
@@ -1388,55 +1388,6 @@
     "from sklearn.decomposition import PCA\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "\n",
-    "def plot_pca_loadings(X, feature_names):\n",
-    "    \"\"\"\n",
-    "    Plot PCA loadings to show feature contributions to principal components.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    X : array-like\n",
-    "        The feature data\n",
-    "    feature_names : list\n",
-    "        Names of the features\n",
-    "    \"\"\"\n",
-    "    # Perform PCA\n",
-    "    pca = PCA(n_components=2)\n",
-    "    pca.fit(X)\n",
-    "    \n",
-    "    # Get the loadings (components)\n",
-    "    loadings = pca.components_.T * np.sqrt(pca.explained_variance_)\n",
-    "    \n",
-    "    # Create the plot\n",
-    "    fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "    \n",
-    "    # Plot arrows for each feature\n",
-    "    for i, feature in enumerate(feature_names):\n",
-    "        ax.arrow(0, 0, loadings[i, 0], loadings[i, 1], \n",
-    "                head_width=0.05, head_length=0.05, fc='red', ec='red')\n",
-    "        ax.text(loadings[i, 0] * 1.15, loadings[i, 1] * 1.15, \n",
-    "               feature, ha='center', va='center', fontsize=10)\n",
-    "    \n",
-    "    # Set plot properties\n",
-    "    ax.set_xlabel(f'PC1 ({pca.explained_variance_ratio_[0]:.2%} variance)', fontsize=12)\n",
-    "    ax.set_ylabel(f'PC2 ({pca.explained_variance_ratio_[1]:.2%} variance)', fontsize=12)\n",
-    "    ax.set_title('PCA Loadings Plot', fontsize=14, fontweight='bold')\n",
-    "    ax.axhline(y=0, color='k', linestyle='--', linewidth=0.5)\n",
-    "    ax.axvline(x=0, color='k', linestyle='--', linewidth=0.5)\n",
-    "    ax.grid(True, alpha=0.3)\n",
-    "    \n",
-    "    # Set equal aspect ratio\n",
-    "    max_val = np.abs(loadings).max() * 1.3\n",
-    "    ax.set_xlim(-max_val, max_val)\n",
-    "    ax.set_ylim(-max_val, max_val)\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "    \n",
-    "    # Print explained variance\n",
-    "    print(f\"Explained variance by PC1: {pca.explained_variance_ratio_[0]:.2%}\")\n",
-    "    print(f\"Explained variance by PC2: {pca.explained_variance_ratio_[1]:.2%}\")\n",
-    "    print(f\"Total explained variance: {sum(pca.explained_variance_ratio_):.2%}\")\n",
     "\n",
     "# Plot the PCA loadings\n",
     "plot_pca_loadings(X, iris.feature_names)"
