Not including empty values, adding labels

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4350a6d6",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0c95d88c",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "86b58f7b",
    "metadata": {},
    "outputs": [
@@ -240,6 +240,7 @@
     "    dict_non_actionable = dict(zip(FEATURES_NAMES, combination))\n",
     "    counterfactuals_df_replications = []\n",
     "    combination_viz = {\n",
+    "        'label': combination,\n",
     "        'pairwise': None,\n",
     "        'pca': None,\n",
     "        'replication': []\n",
@@ -289,7 +290,8 @@
     "        # Add all replications to the overall combinations list\n",
     "        counterfactuals_df_combinations.extend(counterfactuals_df_replications.to_dict('records'))\n",
     "    \n",
-    "    visualizations.append(combination_viz)\n",
+    "    if(combination_viz['replication']):\n",
+    "        visualizations.append(combination_viz)\n",
     "\n",
     "\n",
     "# Convert all combinations to DataFrame\n",
@@ -298,19 +300,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4d255ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "933f10063fe34d31bc61beb9682d5ae9",
+       "model_id": "7ad41958cad64d708562619d15d4cabf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Dropdown(description='Select:', options={'Combination 1': 0, 'Combination 2': 1, 'Combination 3…"
+       "VBox(children=(Dropdown(description='Select:', options={\"('no_change', 'no_change', 'non_increasing', 'no_chan…"
       ]
      },
      "metadata": {},
@@ -321,8 +323,8 @@
     "# Display visualizations with dropdown picker for combination selection\n",
     "from ipywidgets import Dropdown, Output, VBox\n",
     "\n",
-    "# Create dropdown options\n",
-    "combination_options = {f\"Combination {i + 1}\": i for i in range(len(visualizations))}\n",
+    "# Create dropdown options using the label property from visualizations\n",
+    "combination_options = {str(viz['label']): i for i, viz in enumerate(visualizations)}\n",
     "combination_dropdown = Dropdown(options=combination_options, description='Select:')\n",
     "\n",
     "# Create output area for visualizations\n",
@@ -335,7 +337,7 @@
     "        combination_viz = visualizations[combination_idx]\n",
     "        \n",
     "        print(f\"\\n{'='*60}\")\n",
-    "        print(f\"Combination {combination_idx + 1}\")\n",
+    "        print(f\"Combination: {combination_viz['label']}\")\n",
     "        print(f\"{'='*60}\")\n",
     "        \n",
     "        # Display pairwise plot\n",
