Nested dropdown for replications

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -300,14 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "4d255ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aef7e4f2bf9543f88e1dbae35458e7f0",
+       "model_id": "1ebb8dcb9b664ab4894632ce074ce5e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -334,13 +334,21 @@
     "    layout=Layout(width='500px')\n",
     ")\n",
     "\n",
-    "# Create output area for visualizations\n",
-    "output_area = Output()\n",
+    "# Create replication dropdown\n",
+    "replication_dropdown = Dropdown(\n",
+    "    options={},\n",
+    "    description='Replication:',\n",
+    "    layout=Layout(width='500px')\n",
+    ")\n",
     "\n",
-    "def display_combination(combination_idx):\n",
-    "    \"\"\"Display visualizations for selected combination\"\"\"\n",
-    "    output_area.clear_output(wait=True)\n",
-    "    with output_area:\n",
+    "# Create output areas\n",
+    "combination_output_area = Output()  # For PCA and Pairwise plots\n",
+    "replication_output_area = Output()  # For replication visualizations\n",
+    "\n",
+    "def display_combination_plots(combination_idx):\n",
+    "    \"\"\"Display PCA and Pairwise plots for selected combination\"\"\"\n",
+    "    combination_output_area.clear_output(wait=True)\n",
+    "    with combination_output_area:\n",
     "        combination_viz = visualizations[combination_idx]\n",
     "\n",
     "        if combination_viz['pca'] is not None:\n",
@@ -348,23 +356,48 @@
     "\n",
     "        if combination_viz['pairwise'] is not None:\n",
     "            display(combination_viz['pairwise'])\n",
-    "        \n",
-    "        for rep_idx, replication_viz in enumerate(combination_viz['replication']):\n",
-    "            print(f\"\\nReplication {rep_idx + 1}:\")\n",
-    "            for viz_idx, viz in enumerate(replication_viz):\n",
-    "                display(viz)\n",
     "\n",
-    "# Setup event handler\n",
+    "def display_replication(combination_idx, replication_idx):\n",
+    "    \"\"\"Display visualizations for selected replication\"\"\"\n",
+    "    replication_output_area.clear_output(wait=True)\n",
+    "    with replication_output_area:\n",
+    "        combination_viz = visualizations[combination_idx]\n",
+    "        replication_viz = combination_viz['replication'][replication_idx]\n",
+    "        \n",
+    "        print(f\"Replication {replication_idx + 1}:\")\n",
+    "        for viz_idx, viz in enumerate(replication_viz):\n",
+    "            display(viz)\n",
+    "\n",
+    "# Setup event handler for combination change\n",
     "def on_combination_change(change):\n",
-    "    display_combination(change['new'])\n",
+    "    combination_idx = change['new']\n",
+    "    \n",
+    "    # Update replication dropdown options\n",
+    "    num_replications = len(visualizations[combination_idx]['replication'])\n",
+    "    replication_options = {f\"Replication {i + 1}\": i for i in range(num_replications)}\n",
+    "    replication_dropdown.options = replication_options\n",
+    "    replication_dropdown.value = 0\n",
+    "    \n",
+    "    # Display combination plots\n",
+    "    display_combination_plots(combination_idx)\n",
+    "    \n",
+    "    # Display first replication\n",
+    "    display_replication(combination_idx, 0)\n",
+    "\n",
+    "# Setup event handler for replication change\n",
+    "def on_replication_change(change):\n",
+    "    combination_idx = combination_dropdown.value\n",
+    "    replication_idx = change['new']\n",
+    "    display_replication(combination_idx, replication_idx)\n",
     "\n",
     "combination_dropdown.observe(on_combination_change, names='value')\n",
+    "replication_dropdown.observe(on_replication_change, names='value')\n",
     "\n",
     "# Display initial combination\n",
-    "display_combination(0)\n",
+    "on_combination_change({'new': 0})\n",
     "\n",
-    "# Show features label, dropdown and output area\n",
-    "display(VBox([features_label, combination_dropdown, output_area]))"
+    "# Show features label, dropdowns and output areas\n",
+    "display(VBox([features_label, combination_dropdown, combination_output_area, replication_dropdown, replication_output_area]))"
    ]
   }
  ],
