Using a silder for replication selection

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -324,7 +324,7 @@
    ],
    "source": [
     "# Display visualizations with dropdown picker for combination selection\n",
-    "from ipywidgets import Dropdown, Output, VBox, HTML, Layout\n",
+    "from ipywidgets import Dropdown, Output, VBox, HTML, Layout, IntSlider\n",
     "\n",
     "# Create a label showing the features\n",
     "features_label = HTML(f\"<b>Features:</b> {', '.join(FEATURES_NAMES)}\")\n",
@@ -337,9 +337,12 @@
     "    layout=Layout(width='500px')\n",
     ")\n",
     "\n",
-    "# Create replication dropdown\n",
-    "replication_dropdown = Dropdown(\n",
-    "    options={},\n",
+    "# Create replication slider\n",
+    "replication_slider = IntSlider(\n",
+    "    value=0,\n",
+    "    min=0,\n",
+    "    max=0,\n",
+    "    step=1,\n",
     "    description='Replication:',\n",
     "    layout=Layout(width='500px')\n",
     ")\n",
@@ -375,11 +378,10 @@
     "def on_combination_change(change):\n",
     "    combination_idx = change['new']\n",
     "    \n",
-    "    # Update replication dropdown options\n",
+    "    # Update replication slider range\n",
     "    num_replications = len(visualizations[combination_idx]['replication'])\n",
-    "    replication_options = {f\"Replication {i + 1}\": i for i in range(num_replications)}\n",
-    "    replication_dropdown.options = replication_options\n",
-    "    replication_dropdown.value = 0\n",
+    "    replication_slider.max = num_replications - 1\n",
+    "    replication_slider.value = 0\n",
     "    \n",
     "    # Display combination plots\n",
     "    display_combination_plots(combination_idx)\n",
@@ -394,13 +396,13 @@
     "    display_replication(combination_idx, replication_idx)\n",
     "\n",
     "combination_dropdown.observe(on_combination_change, names='value')\n",
-    "replication_dropdown.observe(on_replication_change, names='value')\n",
+    "replication_slider.observe(on_replication_change, names='value')\n",
     "\n",
     "# Display initial combination\n",
     "on_combination_change({'new': 0})\n",
     "\n",
     "# Show features label, dropdowns and output areas\n",
-    "display(VBox([features_label, combination_dropdown, combination_output_area, replication_dropdown, replication_output_area]))"
+    "display(VBox([features_label, combination_dropdown, combination_output_area, replication_slider, replication_output_area]))"
    ]
   }
  ],
