Adding max indicator to sliders

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "06c23dc0",
    "metadata": {},
    "outputs": [
@@ -403,14 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "4d255ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6865651d3b2149af9cb224a01be3ecda",
+       "model_id": "d18c20d3f43a4cd498096120c5741d4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -424,7 +424,7 @@
    ],
    "source": [
     "# Display visualizations with dropdown picker for combination selection\n",
-    "from ipywidgets import Dropdown, Output, VBox, HTML, Layout, IntSlider\n",
+    "from ipywidgets import Dropdown, Output, VBox, HTML, Layout, IntSlider, HBox\n",
     "\n",
     "# Define color mapping for rules\n",
     "RULE_COLORS = {\n",
@@ -510,6 +510,12 @@
     "    replication_slider.max = num_replications - 1\n",
     "    replication_slider.value = 0\n",
     "    \n",
+    "    # Update combination slider max label\n",
+    "    combination_slider_label.value = f\"/ {combination_slider.max}\"\n",
+    "    \n",
+    "    # Update replication slider max label\n",
+    "    replication_slider_label.value = f\"/ {replication_slider.max}\"\n",
+    "    \n",
     "    # Display combination plots\n",
     "    display_combination_plots(combination_idx)\n",
     "    \n",
@@ -525,11 +531,19 @@
     "combination_slider.observe(on_combination_change, names='value')\n",
     "replication_slider.observe(on_replication_change, names='value')\n",
     "\n",
+    "# Create slider labels for max values\n",
+    "combination_slider_label = HTML(value=f\"/ {combination_slider.max}\", layout=Layout(width='auto', margin='5px 0 0 10px'))\n",
+    "replication_slider_label = HTML(value=f\"/ {replication_slider.max}\", layout=Layout(width='auto', margin='5px 0 0 10px'))\n",
+    "\n",
+    "# Wrap sliders with labels\n",
+    "combination_slider_with_label = HBox([combination_slider, combination_slider_label])\n",
+    "replication_slider_with_label = HBox([replication_slider, replication_slider_label])\n",
+    "\n",
     "# Display initial combination\n",
     "on_combination_change({'new': 0})\n",
     "\n",
     "# Show combined label, sliders and output areas\n",
-    "display(VBox([combined_label, combination_slider, combination_output_area, replication_slider, replication_output_area]))\n"
+    "display(VBox([combined_label, combination_slider_with_label, combination_output_area, replication_slider_with_label, replication_output_area]))\n"
    ]
   },
   {
