--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -301,14 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "06c23dc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e679dfb784904043bf7d24c1430fe714",
+       "model_id": "1b208857d848429e931d594aeb60bd8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53c4d4f3956e4b1db83b4705ae3e6e6c",
+       "model_id": "d70fb2e1d0e44b45847c6e0a865e80f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,10 +384,6 @@
     "        \n",
     "        # Store visualizations in the replication object\n",
     "        replication_viz['visualizations'] = replication_visualizations\n",
-    "        \n",
-    "        # Generate explainer summary\n",
-    "        EXPLAINER = CounterFactualExplainer(cf_dpg, ORIGINAL_SAMPLE, counterfactual, TARGET_CLASS)\n",
-    "        plot_explainer_summary(EXPLAINER, ORIGINAL_SAMPLE, counterfactual)\n",
     "    \n",
     "    # Generate combination-level visualizations (PCA and Pairwise)\n",
     "    # Extract all counterfactuals for this combination\n",
@@ -402,15 +398,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f25b811b",
+   "metadata": {},
+   "source": [
+    "## Metrics"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "id": "521b2d3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eea554285bd64c9dac85a50364acda65",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, bar_style='info', description='Metrics:', layout=Layout(width='500px'), ma…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e0f27510865848028cec1963b3bcd7d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border_bottom='1px solid black', border_left='1px solid black', border_right='1px solid b…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create progress widget for metrics generation\n",
+    "metrics_progress_widget = IntProgress(\n",
+    "    value=0,\n",
+    "    min=0,\n",
+    "    max=len(visualizations),\n",
+    "    description='Metrics:',\n",
+    "    bar_style='info',\n",
+    "    orientation='horizontal',\n",
+    "    layout=Layout(width='500px')\n",
+    ")\n",
+    "\n",
+    "metrics_progress_text = HTML(value='<b>Progress: 0 / ' + str(len(visualizations)) + '</b>')\n",
+    "metrics_progress_container = HBox([metrics_progress_widget, metrics_progress_text], layout=Layout(width='100%', padding='10px'))\n",
+    "\n",
+    "# Output area for scrolling logs\n",
+    "metrics_logs_output = Output(layout=Layout(height='400px', overflow_y='auto', border='1px solid black', padding='10px'))\n",
+    "\n",
+    "# Display the fixed progress widget and scrolling output area\n",
+    "display(metrics_progress_container)\n",
+    "display(metrics_logs_output)\n",
+    "\n",
+    "# Iterate over all combinations and generate metrics/explainers\n",
+    "for combination_idx, combination_viz in enumerate(visualizations):\n",
+    "    # Update progress widget\n",
+    "    metrics_progress_widget.value = combination_idx + 1\n",
+    "    metrics_progress_text.value = f'<b>Progress: {combination_idx + 1} / {len(visualizations)}</b>'\n",
+    "    \n",
+    "    dict_non_actionable = dict(zip(FEATURES_NAMES, combination_viz['label']))\n",
+    "    \n",
+    "    with metrics_logs_output:\n",
+    "        print(f\"\\nGenerating metrics for combination {combination_idx + 1}/{len(visualizations)}: {dict_non_actionable}\")\n",
+    "    \n",
+    "    # Generate metrics for each replication\n",
+    "    for replication_idx, replication_viz in enumerate(combination_viz['replication']):\n",
+    "        counterfactual = replication_viz['counterfactual']\n",
+    "        cf_dpg = replication_viz['cf_model']\n",
+    "        \n",
+    "        with metrics_logs_output:\n",
+    "            print(f\"  Replication {replication_idx + 1}/{len(combination_viz['replication'])}\")\n",
+    "        \n",
+    "        # Generate explainer summary\n",
+    "        EXPLAINER = CounterFactualExplainer(cf_dpg, ORIGINAL_SAMPLE, counterfactual, TARGET_CLASS)\n",
+    "        plot_explainer_summary(EXPLAINER, ORIGINAL_SAMPLE, counterfactual)\n",
+    "\n",
+    "with metrics_logs_output:\n",
+    "    print(\"\\n✓ Metrics generation complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "4d255ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d18c20d3f43a4cd498096120c5741d4f",
+       "model_id": "c64784e367234ffe9d1e11a3dd853e64",
        "version_major": 2,
        "version_minor": 0
       },
