--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -903,6 +903,18 @@
     "    print(f\"Profile file not found: {viz_profile_file}\")\n",
     "    print(\"Run the profiling script first: python profile_visualization.py\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f93540fe",
+   "metadata": {},
+   "source": [
+    "## Metrics Performance Profiling Results\n",
+    "\n",
+    "Run the profiling script: `python profile_metrics.py`\n",
+    "\n",
+    "This script profiles ONLY the metrics/explainer generation phase, separating it from counterfactual generation to identify metrics bottlenecks."
+   ]
   }
  ],
  "metadata": {
