More attempts on single analysis

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -145,17 +145,21 @@
     "cf_dpg_custom = CounterFactualModel(MODEL, CONSTRAINTS)\n",
     "cf_dpg_custom.dict_non_actionable = custom_rules\n",
     "\n",
-    "# Generate the counterfactual\n",
-    "custom_counterfactual = cf_dpg_custom.generate_counterfactual(\n",
-    "    ORIGINAL_SAMPLE, \n",
-    "    TARGET_CLASS, \n",
-    "    INITIAL_POPULATION_SIZE, \n",
-    "    MAX_GENERATIONS\n",
-    ")\n",
+    "# Generate the counterfactual with retries\n",
+    "custom_counterfactual = None\n",
+    "for attempt in range(15):\n",
+    "    print(f\"Attempt {attempt + 1}/15\")\n",
+    "    custom_counterfactual = cf_dpg_custom.generate_counterfactual(\n",
+    "        ORIGINAL_SAMPLE, \n",
+    "        TARGET_CLASS, \n",
+    "        INITIAL_POPULATION_SIZE, \n",
+    "        MAX_GENERATIONS\n",
+    "    )\n",
+    "    if custom_counterfactual is not None:\n",
+    "        print(f\"✓ Counterfactual successfully generated on attempt {attempt + 1}!\")\n",
+    "        break\n",
     "\n",
     "if custom_counterfactual is not None:\n",
-    "    print(f\"✓ Counterfactual successfully generated!\")\n",
-    "    \n",
     "    # Create explainer for metrics\n",
     "    custom_explainer = CounterFactualExplainer(cf_dpg_custom, ORIGINAL_SAMPLE, custom_counterfactual, TARGET_CLASS)\n",
     "    \n",
@@ -232,7 +236,7 @@
     "    display(custom_viz_pairwise)\n",
     "    \n",
     "else:\n",
-    "    print(\"✗ Failed to generate counterfactual with the specified rules.\")"
+    "    print(\"✗ Failed to generate counterfactual after 15 attempts.\")"
    ]
   },
   {
