--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -81,7 +81,7 @@
     "CONSTRAINT_PARSER = ConstraintParser(\"constraints/custom_l100_pv0.001_t2_dpg_metrics.txt\")\n",
     "CONSTRAINTS = CONSTRAINT_PARSER.read_constraints_from_file()\n",
     "\n",
-    "cf_dpg = CounterFactualModel(MODEL, CONSTRAINTS, verbose=True)  # Ensure you are using the correct constraints (nested_dict)\n",
+    "COUNTERFACTUAL_DPG = CounterFactualModel(MODEL, CONSTRAINTS, verbose=True)  # Ensure you are using the correct constraints (nested_dict)\n",
     "TARGET_CLASS = 0\n",
     "ORIGINAL_SAMPLE_PREDICTED_CLASS = MODEL.predict(SAMPLE_DATAFRAME)\n",
     "\n",
@@ -307,10 +307,10 @@
     "        with logs_output:\n",
     "            print(f\"\\nCombination {combination_num + 1}/{NUMBER_OF_COMBINATIONS_TO_TEST}: {dict_non_actionable}, Replication: {replication + 1}/{NUMBER_OF_REPLICATIONS_PER_COMBINATION}\")\n",
     "        \n",
-    "        cf_dpg = CounterFactualModel(MODEL, CONSTRAINTS)\n",
-    "        cf_dpg.dict_non_actionable = dict_non_actionable\n",
+    "        COUNTERFACTUAL_DPG = CounterFactualModel(MODEL, CONSTRAINTS)\n",
+    "        COUNTERFACTUAL_DPG.dict_non_actionable = dict_non_actionable\n",
     "\n",
-    "        counterfactual = cf_dpg.generate_counterfactual(ORIGINAL_SAMPLE, TARGET_CLASS, INITIAL_POPULATION_SIZE, MAX_GENERATIONS)\n",
+    "        counterfactual = COUNTERFACTUAL_DPG.generate_counterfactual(ORIGINAL_SAMPLE, TARGET_CLASS, INITIAL_POPULATION_SIZE, MAX_GENERATIONS)\n",
     "        if (counterfactual == None):\n",
     "            # If 3rd replication (index 2) fails, skip the rest of the combination\n",
     "            if replication == 2:\n",
@@ -325,7 +325,7 @@
     "        # Store counterfactual and model in replication_viz object\n",
     "        replication_viz = {\n",
     "            'counterfactual': counterfactual,\n",
-    "            'cf_model': cf_dpg,  # Store the model so we can access fitness data later\n",
+    "            'cf_model': COUNTERFACTUAL_DPG,  # Store the model so we can access fitness data later\n",
     "            'visualizations': [],\n",
     "            'explanations': []\n",
     "        }\n",
@@ -405,7 +405,7 @@
     "    # Generate visualizations for each replication\n",
     "    for replication_idx, replication_viz in enumerate(combination_viz['replication']):\n",
     "        counterfactual = replication_viz['counterfactual']\n",
-    "        cf_dpg = replication_viz['cf_model']  # Use the stored model instead of regenerating\n",
+    "        COUNTERFACTUAL_DPG = replication_viz['cf_model']  # Use the stored model instead of regenerating\n",
     "        \\\n",
     "        with viz_logs_output:\n",
     "            print(f\"  Replication {replication_idx + 1}/{len(combination_viz['replication'])}\")\n",
@@ -414,7 +414,7 @@
     "        replication_visualizations = [\n",
     "            plot_sample_and_counterfactual_heatmap(ORIGINAL_SAMPLE, ORIGINAL_SAMPLE_PREDICTED_CLASS, counterfactual, MODEL.predict(pd.DataFrame([counterfactual])), dict_non_actionable),\n",
     "            plot_sample_and_counterfactual_comparison(MODEL, ORIGINAL_SAMPLE, SAMPLE_DATAFRAME, counterfactual,CONSTRAINTS, CLASS_COLORS_LIST),\n",
-    "            cf_dpg.plot_fitness()  # Use the stored model's fitness data\n",
+    "            COUNTERFACTUAL_DPG.plot_fitness()  # Use the stored model's fitness data\n",
     "        ]\n",
     "        \n",
     "        # Store visualizations in the replication object\n",
@@ -482,13 +482,13 @@
     "    # Generate metrics for each replication\n",
     "    for replication_idx, replication_viz in enumerate(combination_viz['replication']):\n",
     "        counterfactual = replication_viz['counterfactual']\n",
-    "        cf_dpg = replication_viz['cf_model']\n",
+    "        COUNTERFACTUAL_DPG = replication_viz['cf_model']\n",
     "        \n",
     "        with metrics_logs_output:\n",
     "            print(f\"  Replication {replication_idx + 1}/{len(combination_viz['replication'])}\")\n",
     "        \n",
     "        # Generate individual explainer metrics\n",
-    "        EXPLAINER = CounterFactualExplainer(cf_dpg, ORIGINAL_SAMPLE, counterfactual, TARGET_CLASS)\n",
+    "        EXPLAINER = CounterFactualExplainer(COUNTERFACTUAL_DPG, ORIGINAL_SAMPLE, counterfactual, TARGET_CLASS)\n",
     "        \n",
     "        # Collect individual metrics as text strings\n",
     "        feature_modifications = EXPLAINER.explain_feature_modifications()\n",
