Enhance feature explanations

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -167,7 +167,9 @@
     "    print(\"\\n\" + \"=\"*80)\n",
     "    print(\"FEATURE MODIFICATIONS\")\n",
     "    print(\"=\"*80)\n",
-    "    print(custom_explainer.explain_feature_modifications())\n",
+    "    feature_mods = custom_explainer.explain_feature_modifications()\n",
+    "    for mod in feature_mods:\n",
+    "        print(f\"Feature '{mod['feature_name']}': {mod['old_value']} → {mod['new_value']}\")\n",
     "    \n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    print(\"CONSTRAINTS RESPECT\")\n",
@@ -585,7 +587,12 @@
     "        explanations = replication_viz.get('explanations', {})\n",
     "        for explanation_name, explanation_value in explanations.items():\n",
     "            print(f\"\\n{explanation_name}:\")\n",
-    "            print(explanation_value)\n",
+    "            # Special formatting for Feature Modifications (list of dicts)\n",
+    "            if explanation_name == 'Feature Modifications' and isinstance(explanation_value, list):\n",
+    "                for mod in explanation_value:\n",
+    "                    print(f\"  Feature '{mod['feature_name']}': {mod['old_value']} → {mod['new_value']}\")\n",
+    "            else:\n",
+    "                print(explanation_value)\n",
     "\n",
     "        # Use nested visualizations list\n",
     "        for viz_idx, viz in enumerate(replication_viz['visualizations']):\n",
@@ -655,6 +662,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import json\n",
     "from IPython.display import display\n",
     "from ipywidgets import IntSlider, VBox, HBox, Output, Button, Layout, HTML as HTMLWidget\n",
     "\n",
@@ -689,7 +697,20 @@
     "        # Add explanation content from dictionary\n",
     "        explanations = replication_viz.get('explanations', {})\n",
     "        for explanation_name, explanation_value in explanations.items():\n",
-    "            row[explanation_name] = explanation_value\n",
+    "            # Special handling for Feature Modifications (list of dicts)\n",
+    "            if explanation_name == 'Feature Modifications' and isinstance(explanation_value, list):\n",
+    "                # Format as readable text: \"feature, old => new (delta)\"\n",
+    "                formatted_mods = []\n",
+    "                for mod in explanation_value:\n",
+    "                    feature_name = str(mod['feature_name'])\n",
+    "                    old_val = float(mod['old_value'])\n",
+    "                    new_val = float(mod['new_value'])\n",
+    "                    delta = new_val - old_val\n",
+    "                    formatted_mods.append(f\"{feature_name}, {old_val} => {new_val} ({delta:+.2f})\")\n",
+    "                # Join with newlines for display\n",
+    "                row[explanation_name] = \"\\n\".join(formatted_mods)\n",
+    "            else:\n",
+    "                row[explanation_name] = explanation_value\n",
     "        \n",
     "        # Extract any other keys that might exist in replication_viz\n",
     "        for key in replication_viz.keys():\n",
@@ -711,8 +732,8 @@
     "# Configure pandas display options for better table viewing\n",
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.width', None)\n",
-    "pd.set_option('display.max_colwidth', 200)\n",
+    "pd.set_option('display.width', 2000)  # Set a fixed width to enable proper scrolling\n",
+    "pd.set_option('display.max_colwidth', 400)\n",
     "\n",
     "# Create interactive navigation\n",
     "rows_per_page = 10\n",
