Less combinations temporarily

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -89,7 +89,8 @@
     "FEATURES_NAMES = list(ORIGINAL_SAMPLE.keys())\n",
     "RULES_COMBINATIONS = list(itertools.product(RULES, repeat=len(FEATURES_NAMES)))\n",
     "\n",
-    "NUMBER_OF_COMBINATIONS_TO_TEST = len(RULES_COMBINATIONS)\n",
+    "# NUMBER_OF_COMBINATIONS_TO_TEST = len(RULES_COMBINATIONS) # 81\n",
+    "NUMBER_OF_COMBINATIONS_TO_TEST = 9\n",
     "NUMBER_OF_REPLICATIONS_PER_COMBINATION = 10\n",
     "INITIAL_POPULATION_SIZE = 20\n",
     "MAX_GENERATIONS = 60\n"
