--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -170,7 +170,19 @@
     "    print(\"=\"*80)\n",
     "    feature_mods = custom_explainer.explain_feature_modifications()\n",
     "    for mod in feature_mods:\n",
-    "        print(f\"Feature '{mod['feature_name']}': {mod['old_value']} → {mod['new_value']}\")\n",
+    "        feature_name = mod['feature_name']\n",
+    "        old_value = mod['old_value']\n",
+    "        new_value = mod['new_value']\n",
+    "        # Get constraints for this feature from target class\n",
+    "        target_class_constraints = CONSTRAINTS.get(f'Class {TARGET_CLASS}', [])\n",
+    "        # Convert feature name to match constraint format (spaces to underscores, remove units)\n",
+    "        feature_key = feature_name.replace(' (cm)', '').replace(' ', '_')\n",
+    "        # Find the constraint for this feature\n",
+    "        feature_constraint = next((c for c in target_class_constraints if c['feature'] == feature_key), {})\n",
+    "        min_val = feature_constraint.get('min', None)\n",
+    "        max_val = feature_constraint.get('max', None)\n",
+    "        constraint_str = f\"(min: {min_val} -> max: {max_val})\" if min_val is not None or max_val is not None else \"\"\n",
+    "        print(f\"Feature '{feature_name}': {old_value} → {new_value} {constraint_str}\")\n",
     "    \n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    print(\"CONSTRAINTS RESPECT\")\n",
@@ -591,7 +603,19 @@
     "            # Special formatting for Feature Modifications (list of dicts)\n",
     "            if explanation_name == 'Feature Modifications' and isinstance(explanation_value, list):\n",
     "                for mod in explanation_value:\n",
-    "                    print(f\"  Feature '{mod['feature_name']}': {mod['old_value']} → {mod['new_value']}\")\n",
+    "                    feature_name = mod['feature_name']\n",
+    "                    old_value = mod['old_value']\n",
+    "                    new_value = mod['new_value']\n",
+    "                    # Get constraints for this feature from target class\n",
+    "                    target_class_constraints = CONSTRAINTS.get(f'Class {TARGET_CLASS}', [])\n",
+    "                    # Convert feature name to match constraint format (spaces to underscores, remove units)\n",
+    "                    feature_key = feature_name.replace(' (cm)', '').replace(' ', '_')\n",
+    "                    # Find the constraint for this feature\n",
+    "                    feature_constraint = next((c for c in target_class_constraints if c['feature'] == feature_key), {})\n",
+    "                    min_val = feature_constraint.get('min', None)\n",
+    "                    max_val = feature_constraint.get('max', None)\n",
+    "                    constraint_str = f\"(min: {min_val} -> max: {max_val})\" if min_val is not None or max_val is not None else \"\"\n",
+    "                    print(f\"  Feature '{feature_name}': {old_value} → {new_value} {constraint_str}\")\n",
     "            else:\n",
     "                print(explanation_value)\n",
     "\n",
