--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -119,10 +119,32 @@
     "print(f\"Displaying {len(random_samples_df)} random samples from the Iris dataset:\")\n",
     "print(f\"Total dataset size: {total_samples}\\n\")\n",
     "\n",
-    "# Create radio button options\n",
+    "# Create a temporary CounterFactualModel instance to validate constraints\n",
+    "temp_cf_model = CounterFactualModel(MODEL, CONSTRAINTS, verbose=False)\n",
+    "\n",
+    "# Create radio button options with constraint validation\n",
     "radio_options = []\n",
     "for idx, row in random_samples_df.iterrows():\n",
-    "    label = f\"#{idx} | \" + \" | \".join([f\"{col}: {row[col]:.2f}\" if isinstance(row[col], (int, float, np.number)) and col not in ['target', 'index'] else f\"{col}: {row[col]}\" for col in random_samples_df.columns])\n",
+    "    # Convert row to sample dict\n",
+    "    sample_dict = {\n",
+    "        'sepal length (cm)': row['sepal length (cm)'],\n",
+    "        'sepal width (cm)': row['sepal width (cm)'],\n",
+    "        'petal length (cm)': row['petal length (cm)'],\n",
+    "        'petal width (cm)': row['petal width (cm)']\n",
+    "    }\n",
+    "    \n",
+    "    # Get the target class for this sample\n",
+    "    sample_target_class = int(row['target'])\n",
+    "    \n",
+    "    # Validate constraints for this sample against its own class constraints\n",
+    "    is_valid, penalty = temp_cf_model.validate_constraints(sample_dict, sample_dict, sample_target_class)\n",
+    "    \n",
+    "    # Create validation indicator\n",
+    "    validation_status = \"✓\" if is_valid else f\"✗ (penalty: {penalty:.2f})\"\n",
+    "    \n",
+    "    # Build label with constraint validation\n",
+    "    feature_str = \" | \".join([f\"{col}: {row[col]:.2f}\" for col in IRIS.feature_names])\n",
+    "    label = f\"#{idx} | idx:{int(row['index'])} | {validation_status} | {feature_str} | class: {int(row['target'])} ({row['target_name']})\"\n",
     "    radio_options.append((label, idx))\n",
     "\n",
     "# Create radio buttons widget\n",
@@ -169,6 +191,12 @@
     "        print(\"✓ ORIGINAL_SAMPLE updated successfully!\")\n",
     "        print(f\"\\nSelected sample (original index: {int(selected_row['index'])}):\")\n",
     "        print(f\"Target class: {int(selected_row['target'])} ({selected_row['target_name']})\")\n",
+    "        \n",
+    "        # Validate and show constraint status\n",
+    "        sample_target_class = int(selected_row['target'])\n",
+    "        is_valid, penalty = temp_cf_model.validate_constraints(ORIGINAL_SAMPLE, ORIGINAL_SAMPLE, sample_target_class)\n",
+    "        print(f\"Constraint validation: {'✓ Valid' if is_valid else f'✗ Invalid (penalty: {penalty:.2f})'}\")\n",
+    "        \n",
     "        print(\"\\nNew ORIGINAL_SAMPLE values:\")\n",
     "        for key, value in ORIGINAL_SAMPLE.items():\n",
     "            print(f\"  {key}: {value}\")\n",
@@ -191,7 +219,7 @@
     "    }\n",
     "    SAMPLE_DATAFRAME = pd.DataFrame([ORIGINAL_SAMPLE])\n",
     "    \n",
-    "    print(f\"\\n→ First sample auto-selected (index: {int(selected_row['index'])}, class: {selected_row['target_name']})\")"
+    "    print(f\"\\n→ First sample auto-selected (index: {int(selected_row['index'])}, class: {selected_row['target_name']})\")\n"
    ]
   },
   {
