Moving combination to second constant sections

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -77,16 +77,7 @@
     "\n",
     "CONSTRAINT_PARSER = ConstraintParser(\"constraints/custom_l100_pv0.001_t2_dpg_metrics.txt\")\n",
     "CONSTRAINTS = CONSTRAINT_PARSER.read_constraints_from_file()\n",
-    "\n",
-    "TARGET_CLASS = 0\n",
-    "\n",
-    "RULES = ['no_change', 'non_increasing', 'non_decreasing']\n",
-    "\n",
-    "# NUMBER_OF_COMBINATIONS_TO_TEST = len(RULES_COMBINATIONS) # 81\n",
-    "NUMBER_OF_COMBINATIONS_TO_TEST = 9\n",
-    "NUMBER_OF_REPLICATIONS_PER_COMBINATION = 3\n",
-    "INITIAL_POPULATION_SIZE = 20\n",
-    "MAX_GENERATIONS = 60\n"
+    "\n"
    ]
   },
   {
@@ -236,7 +227,18 @@
     "COUNTERFACTUAL_DPG = CounterFactualModel(MODEL, CONSTRAINTS, verbose=True)\n",
     "\n",
     "FEATURES_NAMES = list(ORIGINAL_SAMPLE.keys())\n",
+    "RULES = ['no_change', 'non_increasing', 'non_decreasing']\n",
     "RULES_COMBINATIONS = list(itertools.product(RULES, repeat=len(FEATURES_NAMES)))\n",
+    "\n",
+    "TARGET_CLASS = 0\n",
+    "\n",
+    "\n",
+    "NUMBER_OF_COMBINATIONS_TO_TEST = len(RULES_COMBINATIONS) # 81\n",
+    "# NUMBER_OF_COMBINATIONS_TO_TEST = 9\n",
+    "NUMBER_OF_REPLICATIONS_PER_COMBINATION = 5\n",
+    "INITIAL_POPULATION_SIZE = 20\n",
+    "MAX_GENERATIONS = 60\n",
+    "\n",
     "\n",
     "print(f\"Original Predicted Class: {ORIGINAL_SAMPLE_PREDICTED_CLASS[0]}\")\n",
     "print(f\"Total possible rule combinations: {len(RULES_COMBINATIONS)}\")\n",
